tests/src/frontend/syntax/invalid/const_pattern4.sk
const MyText: String = "foo" + "barbaz";

fun shouldFail(x: String): String {
  x match {
  | MyText -> "Pass\n"
  | _ -> "You shouldn't be seeing this\n"
  }
}
